openshift/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: minimal-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minimal-api
  template:
    metadata:
      labels:
        app: minimal-api
    spec:
      containers:
        - name: container
          image: >-
            image-registry.openshift-image-registry.svc:5000/0198bb-tools/minimal-api:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
