openshift/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: minimal-api
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: minimal-api
