openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minimal-api
spec:
  to:
    kind: Service
    name: minimal-api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  path: /
  port:
    targetPort: 8080
